--- a/stage-08/package.json
+++ b/stage-08/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev": "npx nodemon ./src/server.js"
+    "dev": "npx nodemon ./src/server.js",
+    "migrate": "knex migrate:latest"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "knex": "^2.4.2",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6"
   },
